syntax = "proto3";
package net.thoughtworks.springwithgrpcdemo;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}

service GreetingService {
    rpc greeting (HelloRequest) returns (HelloResponse);
    rpc greetingWithResponseStream (HelloRequest) returns (stream HelloResponse);
    rpc greetingWithRequestStream (stream HelloRequest) returns (HelloResponse);
    rpc greetingWithRequestResponseStream (stream HelloRequest) returns (stream HelloResponse);
}
